ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: angular-webapp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /webapp
          backend:
            serviceName: angular-webapp
            servicePort: 80
